vlib/v/parser/tests/string_raw_cstr_prefix_err.vv
fn main() {
    cr_str := rc'hello'
    println(cr_str) 
}
